--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,88 @@
 #landing header {
   background: #b00507;
-  text-align: center; }
+  padding: 0 0 3px 0; }
   #landing header > img {
-    background: url(/img/w3veto-logo.png); }
+    width: 200px;
+    height: 100px;
+    object-fit: contain;
+    display: block;
+    margin: auto;
+    padding: 25px 0 60px 0; }
+  #landing header > div {
+    display: inline-block;
+    width: 50%; }
+  #landing header .left .preview {
+    text-align: center;
+    width: 550px;
+    height: 295px;
+    margin: auto;
+    background: white;
+    -webkit-border-radius: 18px 18px 0 0;
+    -moz-border-radius: 18px 18px 0 0;
+    border-radius: 18px 18px 0 0; }
+    #landing header .left .preview img {
+      width: 500px;
+      margin-top: 25px;
+      border: 1px solid lightgray; }
+  #landing header .right {
+    width: 600px;
+    vertical-align: top; }
+    #landing header .right h1 {
+      color: white;
+      font: 2.5rem "Comic Sans MS", sans-serif;
+      margin: 10px 0; }
+    #landing header .right .desc {
+      color: lightgray;
+      font: 1.0rem "Arial Black", sans-serif; }
+    #landing header .right button {
+      margin: 15px 0;
+      font: 1.0rem Verdana, sans-serif;
+      color: #b00507;
+      background: #FFD262;
+      border: none;
+      border-bottom: 4px solid #CDA759;
+      padding: 12.5px 30px;
+      position: relative;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px; }
+      #landing header .right button:hover {
+        top: 2px;
+        border-bottom: 2px solid #CDA759;
+        cursor: pointer; }
+#landing .features {
+  padding: 75px 0 50px 0; }
+#landing .item {
+  vertical-align: top;
+  background: #f7f7f7;
+  -webkit-box-shadow: 0 0 5px #bebebe;
+  -moz-box-shadow: 0 0 5px #bebebe;
+  box-shadow: 0 0 5px #bebebe;
+  text-align: center;
+  display: inline-block;
+  width: 27%;
+  height: 300px;
+  margin: 0 3%;
+  padding: 25px 0; }
+  #landing .item .icon {
+    margin: auto;
+    background: white;
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 2px solid #b00507; }
+    #landing .item .icon .fa {
+      font-size: 1.5rem;
+      margin-top: 13px; }
+  #landing .item h2 {
+    font: bold 1.5rem Garamond, sans-serif; }
+  #landing .item .desc {
+    font: 1.1rem Garamond, sans-serif;
+    line-height: 1.2;
+    padding: 0 30px;
+    text-align: justify; }
 
 #app {
   background: #c3c0b5; }
