navigation menu added

--- a/css/partials/app/_options.scss
+++ b/css/partials/app/_options.scss
@@ -1,10 +1,12 @@
 // ===========================================
 // App --> Veto Options
 // ===========================================
+
 //Buttons
 .options
 {
   position: fixed;
+  top: 30px;
   width: 100%;
   padding: 25px 0;
   background: #F2EFE4;
