--- a/css/partials/landing/_header.scss
+++ b/css/partials/landing/_header.scss
@@ -12,7 +12,7 @@ header
     object-fit: contain;
     display: block;
     margin: auto;
-    padding: 25px 0 60px 0;
+    padding: 60px 0;
   }
   > div
   {
