--- a/css/partials/landing/_header.scss
+++ b/css/partials/landing/_header.scss
@@ -13,25 +13,37 @@ header
     display: block;
     margin: auto;
     padding: 60px 0;
+    @media screen and (max-width: 520px) {padding: 60px 0 25px 0;};
   }
   > div
   {
     display: inline-block;
     width: 50%;
+    @media screen and (max-width: 920px)
+    {
+      width: 80%;
+      @media screen and (max-width: 520px) {width: 90%};
+      margin: auto;
+      text-align: center;
+      display: block;
+
+    }
   }
   .left
   {
     .preview
     {
+      position: relative;
       text-align: center;
-      width: 550px;
-      height: 295px;
+      @include wh(550px, 295px);
+      @media screen and (max-width: 1160px) {@include wh(400px, 215px);}
+      @media screen and (max-width: 520px) {@include wh(300px, 160px)};
       margin: auto;
       background: white;
       @include b-radius(18px 18px 0 0);
       img
       {
-        width: 500px;
+        width: 90%;
         margin-top: 25px;
         border: 1px solid lightgray;
       }
@@ -39,13 +51,16 @@ header
   }
   .right
   {
-    width: 600px;
     vertical-align: top;
     h1
     {
       color: white;
       font: 2.5rem "Comic Sans MS", sans-serif;
       margin: 10px 0;
+      @media screen and (max-width: 1160px) {font: 2.0rem "Comic Sans MS", sans-serif;}
+      @media screen and (max-width: 920px) {font: 1.75rem "Comic Sans MS", sans-serif};
+      @media screen and (max-width: 520px) {font: 1.5rem "Comic Sans MS", sans-serif};
+
     }
     .desc
     {
