--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,24 @@ nav {
     display: block;
     margin: auto;
     padding: 60px 0; }
+    @media screen and (max-width: 520px) {
+      #landing header > img {
+        padding: 60px 0 25px 0; } }
   #landing header > div {
     display: inline-block;
     width: 50%; }
+    @media screen and (max-width: 920px) {
+      #landing header > div {
+        width: 80%;
+        margin: auto;
+        text-align: center;
+        display: block; } }
+  @media screen and (max-width: 920px) and (max-width: 520px) {
+    #landing header > div {
+      width: 90%; } }
+
   #landing header .left .preview {
+    position: relative;
     text-align: center;
     width: 550px;
     height: 295px;
@@ -56,17 +70,33 @@ nav {
     -webkit-border-radius: 18px 18px 0 0;
     -moz-border-radius: 18px 18px 0 0;
     border-radius: 18px 18px 0 0; }
+    @media screen and (max-width: 1160px) {
+      #landing header .left .preview {
+        width: 400px;
+        height: 215px; } }
+    @media screen and (max-width: 520px) {
+      #landing header .left .preview {
+        width: 300px;
+        height: 160px; } }
     #landing header .left .preview img {
-      width: 500px;
+      width: 90%;
       margin-top: 25px;
       border: 1px solid lightgray; }
   #landing header .right {
-    width: 600px;
     vertical-align: top; }
     #landing header .right h1 {
       color: white;
       font: 2.5rem "Comic Sans MS", sans-serif;
       margin: 10px 0; }
+      @media screen and (max-width: 1160px) {
+        #landing header .right h1 {
+          font: 2.0rem "Comic Sans MS", sans-serif; } }
+      @media screen and (max-width: 920px) {
+        #landing header .right h1 {
+          font: 1.75rem "Comic Sans MS", sans-serif; } }
+      @media screen and (max-width: 520px) {
+        #landing header .right h1 {
+          font: 1.5rem "Comic Sans MS", sans-serif; } }
     #landing header .right .desc {
       color: lightgray;
       font: 1.0rem "Arial Black", sans-serif; }
@@ -89,6 +119,9 @@ nav {
 #landing .features {
   padding: 75px 0 50px 0; }
 #landing .item {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   vertical-align: top;
   background: #f7f7f7;
   -webkit-box-shadow: 0 0 5px #bebebe;
@@ -100,6 +133,15 @@ nav {
   height: 300px;
   margin: 0 3%;
   padding: 25px 0; }
+  @media screen and (max-width: 1160px) {
+    #landing .item {
+      height: 370px; } }
+  @media screen and (max-width: 920px) {
+    #landing .item {
+      display: block;
+      margin: 50px auto;
+      width: 80%;
+      height: auto; } }
   #landing .item .icon {
     margin: auto;
     background: white;
