--- a/css/style.css
+++ b/css/style.css
@@ -288,17 +288,26 @@ nav {
     margin: auto;
     margin-bottom: 50px;
     background: #F2EFE4;
-    width: 500px;
+    width: 650px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     padding: 50px;
     -webkit-box-shadow: 0 0 25px #000;
     -moz-box-shadow: 0 0 25px #000;
     box-shadow: 0 0 25px #000; }
+    @media screen and (max-width: 680px) {
+      #contact .contact {
+        width: 90%; } }
     #contact .contact > div {
       margin: 5px 0; }
     #contact .contact .title {
       font: bold 1.5rem "Comic Sans MS", sans-serif; }
     #contact .contact .desc {
       font: 1.0rem "Comic Sans MS", sans-serif; }
+      @media screen and (max-width: 500px) {
+        #contact .contact .desc {
+          font: .9rem "Comic Sans MS", sans-serif; } }
   #contact form label {
     display: block;
     width: 100%; }
