Responsive Design Bug fixes

--- a/css/partials/landing/_header.scss
+++ b/css/partials/landing/_header.scss
@@ -83,6 +83,7 @@ header
         top: 2px;
         border-bottom: 2px solid #CDA759;
         cursor: pointer;
+        margin-bottom: 17px;
       }
     }
   }
