--- a/css/partials/app/_options.scss
+++ b/css/partials/app/_options.scss
@@ -11,16 +11,27 @@
   padding: 25px 0;
   background: #F2EFE4;
   border-bottom: 1px solid #b4b4b4;
+  text-align: center;
   > div
   {
+    position: relative;
     display: inline-block;
     width: 20%;
-    text-align: center;
+    @media screen and (max-width: 820px)
+    {
+      width: 33%;
+      margin: 10px 0;
+    }
+    @media screen and (max-width: 586px)
+    {
+      width: 50%;
+    }
     > div
     {
       position: relative;
       width: 125px;
       margin: auto;
+      display: inline-block;
     }
   }
   .select
@@ -62,6 +73,16 @@
   top: 34px;
   bottom: 0;
   display: none;
+  z-index: 99;
+}
+.game-maps .alternatives
+{
+  @media screen and (max-width: 820px) {left: -80%;}
+  @media screen and (max-width: 586px) {left: 0;}
+}
+.game-veto .alternatives
+{
+  @media screen and (max-width: 586px) {left: -80%;}
 }
 .game-mode .alternatives, .game-length .alternatives {width: 152px;}
 .game-maps .alternatives, .game-veto .alternatives {width: 225px}
