--- a/css/partials/app/_veto.scss
+++ b/css/partials/app/_veto.scss
@@ -4,17 +4,25 @@
 
 .veto-window
 {
-  padding: 100px 0 25px 0;
+  padding: 100px 0 0 0;
   text-align: center;
   .vetoes
   {
-    padding: 25px 50px;
-    width: 1000px;
+    padding: 25px 0;
+    @media screen and (max-width: 820px) {padding: 100px 0 0 0;}
+    @media screen and (max-width: 586px) {padding: 150px 0 0 0;}
+    @media screen and (max-width: 508px) {padding: 175px 0 0 0;}
+    @media screen and (min-width: 1220px) {width: 1000px;}
     margin: auto;
     .maps
     {
       vertical-align: top;
       @include wh(205px, 205px);
+      @media screen and (max-width: 508px)
+      {
+        @include wh(160px, 160px);
+        margin: 5px;
+      }
       display: inline-block;
       margin: 20px;
       @include box-shadow(0 0 10px #000);
