--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ nav {
     text-align: justify; }
 
 #app {
+  overflow-x: hidden;
   background: #c3c0b5; }
   #app .options {
     position: fixed;
@@ -171,15 +172,24 @@ nav {
     width: 100%;
     padding: 25px 0;
     background: #F2EFE4;
-    border-bottom: 1px solid #b4b4b4; }
+    border-bottom: 1px solid #b4b4b4;
+    text-align: center; }
     #app .options > div {
+      position: relative;
       display: inline-block;
-      width: 20%;
-      text-align: center; }
+      width: 20%; }
+      @media screen and (max-width: 820px) {
+        #app .options > div {
+          width: 33%;
+          margin: 10px 0; } }
+      @media screen and (max-width: 586px) {
+        #app .options > div {
+          width: 50%; } }
       #app .options > div > div {
         position: relative;
         width: 125px;
-        margin: auto; }
+        margin: auto;
+        display: inline-block; }
     #app .options .select {
       cursor: pointer;
       width: 100%;
@@ -216,7 +226,17 @@ nav {
     right: 0;
     top: 34px;
     bottom: 0;
-    display: none; }
+    display: none;
+    z-index: 99; }
+  @media screen and (max-width: 820px) {
+    #app .game-maps .alternatives {
+      left: -80%; } }
+  @media screen and (max-width: 586px) {
+    #app .game-maps .alternatives {
+      left: 0; } }
+  @media screen and (max-width: 586px) {
+    #app .game-veto .alternatives {
+      left: -80%; } }
   #app .game-mode .alternatives, #app .game-length .alternatives {
     width: 152px; }
   #app .game-maps .alternatives, #app .game-veto .alternatives {
@@ -250,12 +270,23 @@ nav {
         -o-transform: scale(1.75);
         transform: scale(1.75); }
   #app .veto-window {
-    padding: 100px 0 25px 0;
+    padding: 100px 0 0 0;
     text-align: center; }
     #app .veto-window .vetoes {
-      padding: 25px 50px;
-      width: 1000px;
+      padding: 25px 0;
       margin: auto; }
+      @media screen and (max-width: 820px) {
+        #app .veto-window .vetoes {
+          padding: 100px 0 0 0; } }
+      @media screen and (max-width: 586px) {
+        #app .veto-window .vetoes {
+          padding: 150px 0 0 0; } }
+      @media screen and (max-width: 508px) {
+        #app .veto-window .vetoes {
+          padding: 175px 0 0 0; } }
+      @media screen and (min-width: 1220px) {
+        #app .veto-window .vetoes {
+          width: 1000px; } }
       #app .veto-window .vetoes .maps {
         vertical-align: top;
         width: 205px;
@@ -265,6 +296,11 @@ nav {
         -webkit-box-shadow: 0 0 10px #000;
         -moz-box-shadow: 0 0 10px #000;
         box-shadow: 0 0 10px #000; }
+        @media screen and (max-width: 508px) {
+          #app .veto-window .vetoes .maps {
+            width: 160px;
+            height: 160px;
+            margin: 5px; } }
         #app .veto-window .vetoes .maps:hover {
           cursor: pointer; }
   #app .Ban, #app .Pick {
