--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,10 @@ nav {
   width: 100%;
   padding: 15px 25px;
   border-bottom: 1px solid lightgray; }
-  nav button {
+  nav a {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
@@ -20,18 +23,18 @@ nav {
     border: none;
     background: transparent;
     font: 1.0rem "Comic Sans MS", sans-serif; }
-    nav button:hover {
+    nav a:hover {
       color: #b00507;
       cursor: pointer; }
 
 #app nav {
   padding: 0;
   height: 30px; }
-  #app nav button {
+  #app nav a {
     opacity: 0; }
   #app nav:hover {
     padding: 15px 25px; }
-    #app nav:hover button {
+    #app nav:hover a {
       opacity: 1; }
 
 #landing header {
@@ -100,8 +103,9 @@ nav {
     #landing header .right .desc {
       color: lightgray;
       font: 1.0rem "Arial Black", sans-serif; }
-    #landing header .right button {
-      margin: 15px 0;
+    #landing header .right a {
+      text-decoration: none;
+      top: 30px;
       font: 1.0rem Verdana, sans-serif;
       color: #b00507;
       background: #FFD262;
@@ -112,8 +116,8 @@ nav {
       -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
       border-radius: 4px; }
-      #landing header .right button:hover {
-        top: 2px;
+      #landing header .right a:hover {
+        top: 32px;
         border-bottom: 2px solid #CDA759;
         cursor: pointer;
         margin-bottom: 17px; }
