--- a/css/style.css
+++ b/css/style.css
@@ -103,24 +103,20 @@ nav {
     #landing header .right .desc {
       color: lightgray;
       font: 1.0rem "Arial Black", sans-serif; }
-    #landing header .right a {
-      text-decoration: none;
-      top: 30px;
+    #landing header .right button {
+      position: relative;
       font: 1.0rem Verdana, sans-serif;
       color: #b00507;
       background: #FFD262;
       border: none;
       border-bottom: 4px solid #CDA759;
       padding: 12.5px 30px;
-      position: relative;
+      margin: 20px 0;
       -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
       border-radius: 4px; }
-      #landing header .right a:hover {
-        top: 32px;
-        border-bottom: 2px solid #CDA759;
-        cursor: pointer;
-        margin-bottom: 17px; }
+      #landing header .right button:hover {
+        cursor: pointer; }
 #landing .features {
   padding: 75px 0 50px 0; }
 #landing .item {
@@ -349,7 +345,7 @@ nav {
       font: 1.0rem "Comic Sans MS", sans-serif; }
       @media screen and (max-width: 500px) {
         #contact .contact .desc {
-          ont: .9rem "Comic Sans MS", sans-serif; } }
+          font: .9rem "Comic Sans MS", sans-serif; } }
   #contact form label {
     display: block;
     width: 100%; }
